<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#4403c9">

    <TextView
        android:text="@string/filename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/filename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playbutton"
            android:id="@+id/playbutton"
            android:src ="@drawable/play"
            android:onClick="mediaplay"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pausebutton"
            android:id="@+id/pausebutton"
            android:src="@drawable/pause"
            android:onClick="mediaplay"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:src="@drawable/reset"
            android:id="@+id/resetbutton"
            android:onClick="mediaplay"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:src="@drawable/stop"
            android:id="@+id/stopbutton"
            android:onClick="mediaplay"/>

    </LinearLayout>



    <SurfaceView
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:id="@+id/surfaceView"/>




</LinearLayout>
